--- a/.github/workflows/sixt-coding-actions.yml
+++ b/.github/workflows/sixt-coding-actions.yml
@@ -1,12 +1,19 @@
-name: sixt-coding-actions
-on: [push]
+name: sixt-coding actions
+on:
+  push:
+    branches: [development]
+  workflow_dispatch:
 jobs:
-  check-bats-version:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: "14"
-      - run: npm install
-      - run: npm run test
+          node-version: "14.x"
+      - name: Install dependencies
+        run: npm install
+      - name: Run test
+        run: npm test
